Better support for m2e

--- a/gwt-ol3/pom.xml
+++ b/gwt-ol3/pom.xml
@@ -112,10 +112,10 @@
             </plugin>
 
         </plugins>
-<!--        <pluginManagement>
+        <pluginManagement>
             <plugins>
-                This plugin's configuration is used to store Eclipse m2e settings
-                only. It has no influence on the Maven build itself.
+ <!--               This plugin's configuration is used to store Eclipse m2e settings
+                only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
@@ -148,6 +148,5 @@
                 </plugin>
             </plugins>
         </pluginManagement>
- -->
     </build>
 </project>
