--- a/v-ol3/pom.xml
+++ b/v-ol3/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>gwt-ol3</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- for serializing features as geojson -->
+        <dependency>
+            <groupId>de.grundid.opendatalab</groupId>
+            <artifactId>geojson-jackson</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
 <build>
