--- a/gwt-ol3/pom.xml
+++ b/gwt-ol3/pom.xml
@@ -5,8 +5,8 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>gwt-ol3</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>gwt-ol3 Add-on</name>
+	<version>0.1</version>
+	<name>OpenLayers 3 Wrapper for GWT</name>
 
     <dependencies>
         <dependency>
@@ -106,11 +106,23 @@
                     <finalName>${project.artifactId}-${project.version}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
-                        <descriptor>assembly.xml</descriptor>
+                        <descriptor>assembly/assembly.xml</descriptor>
                     </descriptors>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadoc</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
