--- a/gwt-ol3/pom.xml
+++ b/gwt-ol3/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>gwt-ol3</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.2</version>
+	<version>0.1.3-SNAPSHOT</version>
 	<name>OpenLayers 3 Wrapper for GWT</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
