Updated pom.xml to use latest gwt-ol3 library

--- a/v-ol3/pom.xml
+++ b/v-ol3/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.vaadin</groupId>
             <artifactId>gwt-ol3</artifactId>
-            <version>0.1.4</version>
+            <version>0.1.5-SNAPSHOT</version>
         </dependency>
         <!-- for serializing features as geojson -->
         <dependency>
