--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.addon</groupId>
 	<artifactId>ol3-wrapper</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0-vaadin8</version>
+	<version>2.0-apg</version>
 	<name>Open Layers 3 Vaadin wrapper Add-on</name>
 
 	<modules>
