--- a/v-ol3/pom.xml
+++ b/v-ol3/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.addon</groupId>
 	<artifactId>v-ol3</artifactId>
 	<packaging>bundle</packaging>
-	<version>2.0</version>
+	<version>2.0-apg</version>
 	<name>OpenLayers 3 Wrapper for Vaadin</name>
 
 	<properties>
