--- a/v-ol3/pom.xml
+++ b/v-ol3/pom.xml
@@ -161,7 +161,7 @@
         <dependency>
             <groupId>org.vaadin</groupId>
             <artifactId>gwt-ol3</artifactId>
-            <version>2.0</version>
+            <version>2.0-apg</version>
         </dependency>
         <!-- for serializing features as geojson -->
         <dependency>
