--- a/gwt-ol3/pom.xml
+++ b/gwt-ol3/pom.xml
@@ -7,6 +7,10 @@
 	<packaging>jar</packaging>
 	<version>2.1</version>
 	<name>OpenLayers 3 Wrapper for GWT</name>
+    <organization>
+        <name>VOL3</name>
+        <url>http://vaadin.com</url>
+    </organization>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--<vaadin.version>7.7.6</vaadin.version>-->
