--- a/gwt-ol3/pom.xml
+++ b/gwt-ol3/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>gwt-ol3</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1</version>
+	<version>2.1.vaadin.8.6</version>
 	<name>OpenLayers 3 Wrapper for GWT</name>
     <organization>
         <name>VOL3</name>
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--<vaadin.version>7.7.6</vaadin.version>-->
-        <vaadin.version>8.0.6</vaadin.version>
+        <vaadin.version>8.6.4</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 
         <!-- ZIP Manifest fields -->
