--- a/v-ol3/pom.xml
+++ b/v-ol3/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.addon</groupId>
 	<artifactId>v-ol3</artifactId>
 	<packaging>bundle</packaging>
-	<version>2.1</version>
+	<version>2.1.vaadin.8.6</version>
 	<name>OpenLayers 3 Wrapper for Vaadin</name>
     <organization>
         <name>VOL3</name>
@@ -15,7 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--<vaadin.version>7.7.6</vaadin.version>-->
-        <vaadin.version>8.0.6</vaadin.version>
+        <vaadin.version>8.6.4</vaadin.version>
 
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 
@@ -182,7 +182,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-context-menu</artifactId>
-            <version>2.0.0</version>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 
